# discord-pigeon

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
discord_pigeon/: main.py
tests/: test_discord_pigeon.py
