[tool.poetry]
name = "discord-pigeon"
version = "0.1.0"
description = ""
authors = ["106 <Segmentation-fault@yandex.ua>"]

[tool.poetry.dependencies]
python = "^3.9"
pymongo = "^3.12.0"
APScheduler = "^3.7.0"
"discord.py" = "^1.7.3"
pydantic = "^1.8.2"
python-dotenv = "^0.19.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.7b0"
flake8 = "^3.9.2"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
